		- Catch uncaught exceptions in Neural Net code [Khaled Nasr].
		- Fix build of modular interfaces with SWIG 3.0.5 on MacOSX [Björn Esser].
		- Fix segfaults when calling delete[] twice on SGMatrix-instances [Björn Esser].
		- Fix for building with full-hardening-(CXX|LD)FLAGS [Björn Esser].
		- Patch SWIG to fix a problem with SWIG and Python >= 3.5 [Björn Esser].
	* Cleanup, efficiency updates, and API Changes:
		- Added GPU based dot-products to linalg [Rahul De].
		- Added scale methods to linalg [Rahul De].
		- Added element wise products to linalg [Rahul De].
		- Added element-wise unary operators in linalg [Rahul De].
		- Dropped parameter migration framework [Heiko Strathmann].
		- Disabled Python integration tests by default [Sergey Lisitsyn, Heiko Strathmann].

2015-01-26 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 4.0.0 (libshogun 17.0, data 0.9, parameter 1)
	* This release features the work of our 8 GSoC 2014 students [student; mentors]:
	    - OpenCV Integration and Computer Vision Applications [Abhijeet Kislay; Kevin Hughes]
	    - Large-Scale Multi-Label Classification [Abinash Panda; Thoralf Klein]
	    - Large-scale structured prediction with approximate inference [Jiaolong Xu; Shell Hu]
	    - Essential Deep Learning Modules [Khaled Nasr; Sergey Lisitsyn, Theofanis Karaletsos]
	    - Fundamental Machine Learning: decision trees, kernel density estimation [Parijat Mazumdar ; Fernando Iglesias]
	    - Shogun Missionary & Shogun in Education [Saurabh Mahindre; Heiko Strathmann]
	    - Testing and Measuring Variable Interactions With Kernels [Soumyajit De; Dino Sejdinovic, Heiko Strathmann]
	    - Variational Learning for Gaussian Processes [Wu Lin; Heiko Strathmann, Emtiyaz Khan]
	* This release also contains several cleanups and bugfixes:
	* Features:
		- New Shogun project description [Heiko Strathmann]
		- ID3 algorithm for decision tree learning [Parijat Mazumdar]