@@ -8,5 +8,5 @@ FOREACH(EXAMPLE ${RUBY_EXAMPLES})
 			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 			COMMAND ${RUBY_EXECUTABLE} ${EXAMPLE})
 	set_property(TEST ruby-${EXAMPLE_NAME} PROPERTY
-		ENVIRONMENT "RUBYLIB=${RUBY_MODULAR_BINARY_DIR}:${NARRAY_PATH}:.")
+		ENVIRONMENT "RUBYLIB=${RUBY_MODULAR_SOURCE_DIR}:${RUBY_MODULAR_BINARY_DIR}:.")
 ENDFOREACH()
