@@ -1,4 +1,3 @@
-require 'rubygems'
 require 'modshogun'
 require 'pp'
 parameter_list=[['../data/train_sparsereal.light']]
