@@ -1,4 +1,3 @@
-require 'rubygems'
 require 'modshogun'
 require 'pp'
 require 'load'
