@@ -1,0 +1,3 @@
+require 'rubygems'
+require 'narray'
+require 'modshogun.so'
