@@ -21,6 +21,7 @@
 		- Fix segfaults when calling delete[] twice on SGMatrix-instances [Björn Esser].
 		- Fix for building with full-hardening-(CXX|LD)FLAGS [Björn Esser].
 		- Patch SWIG to fix a problem with SWIG and Python >= 3.5 [Björn Esser].
+		- Add modshogun.rb: make sure narray is loaded before modshogun.so [Björn Esser].
 	* Cleanup, efficiency updates, and API Changes:
 		- Added GPU based dot-products to linalg [Rahul De].
 		- Added scale methods to linalg [Rahul De].
